--- a/schedule.html
+++ b/schedule.html
@@ -67,6 +67,15 @@
             zoomableImages.forEach(image => {
                 pinchZoom(image);
             });
+
+            // Add event listener for touchstart on the document
+            document.addEventListener('touchstart', (event) => {
+                // Check if the touch event involves a single touch
+                if (event.touches.length === 1) {
+                    // Allow scrolling on the page
+                    return;
+                }
+            }, { passive: false }); // Set passive option to false to enable preventDefault
         });
     </script>
 </head>
