--- a/schedule.html
+++ b/schedule.html
@@ -68,12 +68,11 @@
                 pinchZoom(image);
             });
 
-            // Add event listener for touchstart on the document
-            document.addEventListener('touchstart', (event) => {
+            // Add event listener for touchmove on the document
+            document.addEventListener('touchmove', (event) => {
                 // Check if the touch event involves a single touch
                 if (event.touches.length === 1) {
-                    // Allow scrolling on the page
-                    return;
+                    event.preventDefault(); // Prevent default scrolling
                 }
             }, { passive: false }); // Set passive option to false to enable preventDefault
         });
