--- a/schedule.html
+++ b/schedule.html
@@ -80,7 +80,7 @@
 <body>
     <div id="sch">
         <div class="image-frame">
-            <img src="images/notlogo.jpg" alt="Huyatina Image">
+            <img src="images/small_logo.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Schedule</h1>
