--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
 
     
         <div class="image-frame">
-            <img src="images/notlogo.jpg" alt="Huyatina Image">
+            <img src="images/contacts.jpg" alt="Huyatina Image">
         </div>
         <div id="cts">
             <br>
