--- a/home.html
+++ b/home.html
@@ -17,14 +17,14 @@
         </div>
         <br>
         <h1>Dentist Event</h1>
-        <button id="register2">Register</button>
-        <button id="schedule">Schedule</button>
-        <button id="route">Route</button>
-        <button id="presentation">Presentation</button>
-        <button id="link">Link</button>
-        <button id="programm">Programm</button>
-        <button id="contacts">Contacts</button>
-        <button id="chat">Telegram chat</button>
+        <button id="register2">Регистрация (не обязательная)</button>
+        <button id="schedule">Расписание мероприятия</button>
+        <button id="route">Схема проезда</button>
+        <button id="presentation">Презентация спикеров</button>
+        <button id="link">Ссылка на трансляцию</button>
+        <button id="programm">Развлекательная программа</button>
+        <button id="contacts">Контакты</button>
+        <button id="chat">Чат сообщества</button>
     </div>
 
     <script>
