--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="preview">
-        <img id="imagefirst" src="images/pre1.jpg">
+        <img id="imagefirst" src="images/preview1.jpg">
 
     </div>
 
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const images = ['prev1.jpg', 'prev2.jpg', 'prev3.jpg', '4prev.jpg', 'prev5.jpg'];
+        const images = ['preview1.jpg', 'preview2.jpg', 'preview3.jpg', 'preview4.jpg', 'preview5.jpg'];
         let currentIndex = 0;
         
 
