--- a/presentation.html
+++ b/presentation.html
@@ -15,7 +15,7 @@
 
     <div id="pr">
         <div class="image-frame">
-            <img src="images/notlogo.jpg" alt="Huyatina Image">
+            <img src="images/presentation.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Presentations of speakers</h1>
