--- a/programm.html
+++ b/programm.html
@@ -16,7 +16,7 @@
 
     <div id="pgm">
         <div class="image-frame">
-            <img src="images/notlogo.jpg" alt="Huyatina Image">
+            <img src="images/programka.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Programm</h1>
