--- a/route.html
+++ b/route.html
@@ -16,7 +16,7 @@
 
     <div id="rt">
         <div class="image-frame">
-            <img src="images/notlogo.jpg" alt="Huyatina Image">
+            <img src="images/route.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Route</h1>
