--- a/schedule.html
+++ b/schedule.html
@@ -80,15 +80,15 @@
 <body>
     <div id="sch">
         <div class="image-frame">
-            <img src="images/small_logo.jpg" alt="Huyatina Image">
+            <img src="images/sch.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Schedule</h1>
         <div id="contectimg">
-            <img id="zoomImage1" src="images/prog2.jpg" class="zoomable-image">
+            <img id="zoomImage1" src="images/schedule1.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <img id="zoomImage2" src="images/prog4.jpg" class="zoomable-image">
+            <img id="zoomImage2" src="images/schedule2.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
             <img id="zoomImage3" src="images/check2.jpg" class="zoomable-image">
