--- a/test.html
+++ b/test.html
@@ -80,7 +80,7 @@
 <body>
     <div id="sch">
         <div class="image-frame">
-            <img src="images/notlogo.jpg" alt="Huyatina Image">
+            <img src="images/small_logo.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Schedule</h1>
@@ -104,3 +104,30 @@
     </div>
 </body>
 </html>
+
+
+
+
+/* _____________CONTENT_________________  TODO: FIX */
+#contectimg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 20px;
+    border: 1px solid #bdbcbc;
+    padding-top: 140%; /* 2:3 aspect ratio */
+    overflow: hidden;
+    position: relative;
+}
+
+#contectimg img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: transform 0.3s ease; /* Smooth transition */
+}
