--- a/presentation.html
+++ b/presentation.html
@@ -19,9 +19,19 @@
         </div>
         <br>
         <h1>Presentations of speakers</h1>
-        <button class="speaker" data-pdf="Pre-Test.pdf">Dmytro Seleba</button>
-        <button class="speaker" data-pdf="my_resume_n.pdf">Andrii Zabolotnyi</button>
-        <button class="speaker" data-pdf="Pre-Test.pdf">Oksana PrychepenskA</button>        
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
+        <div id="contectimg">
+            <img id="zoomImage1" src="images/speaker.jpg" class="zoomable-image">
+        </div> 
+        <button class="speaker" data-pdf="Pre-Test.pdf">Иван Федоров</button>
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+        <div id="contectimg">
+            <img id="zoomImage1" src="images/speaker2.jpg" class="zoomable-image">
+        </div> 
+        <button class="speaker" data-pdf="my_resume_n.pdf">Эмилия Ли</button>
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
     </div>
 
     <script>
