--- a/reg2.html
+++ b/reg2.html
@@ -14,8 +14,8 @@
 <body>
 
     <div id="second_reg">
-        <div class="main-image-frame">
-            <img src="images/logo.jpg" alt="Huyatina Image">
+        <div class="image-frame">
+            <img src="images/register.jpg" alt="Huyatina Image">
         </div>
         <br>
         <h1>Registration</h1>
