--- a/presentation.html
+++ b/presentation.html
@@ -21,12 +21,12 @@
         <h1>Presentations of speakers</h1>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
 
-        <div id="contectimg">
+        <div id="contectimg1">
             <img id="zoomImage1" src="images/speaker.jpg" class="zoomable-image">
         </div> 
         <button class="speaker" data-pdf="Pre-Test.pdf">Иван Федоров</button>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
-        <div id="contectimg">
+        <div id="contectimg1">
             <img id="zoomImage1" src="images/speaker2.jpg" class="zoomable-image">
         </div> 
         <button class="speaker" data-pdf="my_resume_n.pdf">Эмилия Ли</button>
