--- a/presentation.html
+++ b/presentation.html
@@ -30,7 +30,7 @@
         <div id="contectimg1">
             <img id="zoomImage1" src="images/speaker2.jpg" class="zoomable-image">
         </div> 
-        <button class="speaker" data-pdf="my_resume_n.pdf">Эмилия Ли</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Эмилия Ли</button>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
 
     </div>
@@ -42,7 +42,7 @@
             speaker.addEventListener("click", async (event) => {
                 let pdfFileName = speaker.getAttribute("data-pdf");
 
-                let response = await fetch(`https://7452-2a02-ff0-220-4baf-8167-c6b9-ebb-f149.ngrok-free.app/pdf?filename=${pdfFileName}`, {
+                let response = await fetch(`https://46a4-2a02-ff0-220-a1c6-54a6-764-10c5-d416.ngrok-free.app/pdf?filename=${pdfFileName}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
