--- a/contacts.html
+++ b/contacts.html
@@ -22,17 +22,19 @@
         </div>
         <div id="cts">
             <br>
-            <h1>Contacts</h1>
-            <label>Name:</label> <p id="cont">Anton</p><br>
-            <label>Surname:</label> <p id="cont">Grigorievich</p><br>
-            <label>Telephone:</label> <p id="cont">+23038534953</p><br>
+            <h1>Контакты</h1>
+            <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
+            <label>Имя:</label> <p id="cont">Anton</p><br>
+            <label>Фамилия:</label> <p id="cont">Grigorievich</p><br>
+            <label>Телефон:</label> <p id="cont">+23038534953</p><br>
             <label>E-mail:</label> <p id="cont">anton@anton.anton</p><br>
-            <label>Position:</label> <p id="cont">Senior Anton in Anton&Co. Industries</p><br>
-            <label>Address:</label> <p id="cont">Turkey, Istanbul, Kadikoy Ortaboyir Pembe Sokak 39/2, apt.17</p><br>
-            <label>Index:</label> <p id="cont">651728 TR</p><br>
-            <label>Next of Kin:</label> <p id="cont">(Anton's Mother) Antonia</p><br>
-            <label>Working hours:</label> <p id="cont">17:00 - 23:00 everyday</p><br>
-            <label>Something else:</label> <p id="cont">ANTON</p><br>
+            <label>Должность:</label> <p id="cont">Senior Anton in Anton&Co. Industries</p><br>
+            <label>Адрес:</label> <p id="cont">Turkey, Istanbul, Kadikoy Ortaboyir Pembe Sokak 39/2, apt.17</p><br>
+            <label>Индекс:</label> <p id="cont">651728 TR</p><br>
+            <label>Ближайщий родственник:</label> <p id="cont">(Anton's Mother) Antonia</p><br>
+            <label>Рабочие часы:</label> <p id="cont">17:00 - 23:00 everyday</p><br>
+            <label>Что-то еще:</label> <p id="cont">ANTON</p><br>
 
             
         </div>
