--- a/home.html
+++ b/home.html
@@ -16,7 +16,9 @@
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <br>
-        <h1>Dentist Event</h1>
+        <h1>Медицинская Конференция</h1>
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
         <button id="register2">Регистрация (не обязательная)</button>
         <button id="schedule">Расписание мероприятия</button>
         <button id="route">Схема проезда</button>
@@ -25,6 +27,10 @@
         <button id="programm">Развлекательная программа</button>
         <button id="contacts">Контакты</button>
         <button id="chat">Чат сообщества</button>
+        <br>
+        
+        <br>
+
     </div>
 
     <script>
