--- a/presentation.html
+++ b/presentation.html
@@ -19,7 +19,7 @@
             <img src="images/presentation.jpg" alt="Huyatina Image">
         </div>
         <br>
-        <h1>Presentations of speakers</h1>
+        <h1>Презентация спикеров</h1>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
 
         <div id="contectimg1">
