--- a/reg2.html
+++ b/reg2.html
@@ -18,7 +18,9 @@
             <img src="images/register.jpg" alt="Huyatina Image">
         </div>
         <br>
-        <h1>Registration</h1>
+        <h1>Регистрация</h1>
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
         <form method="POST">
             <!-- ADD "REQUIRED TO EVERY FIELD" -->
             <input type="text" id="name" placeholder="Name" required> 
@@ -28,7 +30,7 @@
             <input type="text" id="city" placeholder="City" >
             <input type="text" id="school" placeholder="school" >
             <input type="text" id="position" placeholder="position">
-            <button id="register">Register</button>
+            <button id="register">Зарегистрироваться</button>
 
         </form>
     </div>
