--- a/route.html
+++ b/route.html
@@ -20,7 +20,9 @@
             <img src="images/route.jpg" alt="Huyatina Image">
         </div>
         <br>
-        <h1>Route</h1>
+        <h1>Схема проезда</h1>
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
         <div id="contectimg">
             <img src="images/r1.jpg" class="zoomable-image">
         </div> 
@@ -37,7 +39,7 @@
             <img src="images/r5.jpg" class="zoomable-image">
         </div>  
         <br> 
-            <button id="map">Map</button>
+            <button id="map">Карта</button>
     </div>
 
     <script>
