--- a/schedule.html
+++ b/schedule.html
@@ -26,22 +26,24 @@
             <img src="images/sch.jpg" alt="Huyatina Image">
         </div>
         <br>
-        <h1>Schedule</h1>
+        <h1>Расписание</h1>
+        <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
+
         <div id="contectimg">
             <img id="zoomImage1" src="images/schedule1.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
             <img id="zoomImage2" src="images/schedule2.jpg" class="zoomable-image">
         </div>
-        <div id="contectimg">
-            <img id="zoomImage3" src="images/check2.jpg" class="zoomable-image">
+        <!-- <div id="contectimg">
+            <img id="zoomImage3" src="" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <img id="zoomImage4" src="images/fhfhfh.jpeg" class="zoomable-image">
+            <img id="zoomImage4" src="" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img id="zoomImage5" src="images/prog2.jpg" class="zoomable-image">
-        </div>
+            <img id="zoomImage5" src="" class="zoomable-image">
+        </div> -->
         <br> 
         <br> 
     </div>
