--- a/reg2.html
+++ b/reg2.html
@@ -23,13 +23,13 @@
 
         <form method="POST">
             <!-- ADD "REQUIRED TO EVERY FIELD" -->
-            <input type="text" id="name" placeholder="Name" required> 
-            <input type="text" id="lastname" placeholder="Last Name" >
+            <input type="text" id="name" placeholder="Имя" required> 
+            <input type="text" id="lastname" placeholder="Фамилия" >
             <input type="text" id="email" placeholder="e-mail@gmail.com" >
-            <input type="text" id="tel" placeholder="Tel no (+380_____)" >
-            <input type="text" id="city" placeholder="City" >
-            <input type="text" id="school" placeholder="school" >
-            <input type="text" id="position" placeholder="position">
+            <input type="text" id="tel" placeholder="Телефон" >
+            <input type="text" id="city" placeholder="Город" >
+            <!-- <input type="text" id="school" placeholder="school" >
+            <input type="text" id="position" placeholder="position"> -->
             <button id="register">Зарегистрироваться</button>
 
         </form>
