--- a/reg2.html
+++ b/reg2.html
@@ -37,11 +37,11 @@
 
     <!-- Add three <br> elements initially -->
     <br id="br1">
-    <br id="br2">
+    <!-- <br id="br2">
     <br id="br3">
     <br id="br4">
     <br id="br5">
-    <br id="br6">
+    <br id="br6"> -->
 
     <script>
         const registerButton = document.getElementById('register');
@@ -115,22 +115,22 @@
         function handleFocus() {
             // Add <br> elements when the keyboard is opened
             document.getElementById('br1').style.display = 'block';
-            document.getElementById('br2').style.display = 'block';
-            document.getElementById('br3').style.display = 'block';
-            document.getElementById('br4').style.display = 'block';
-            document.getElementById('br5').style.display = 'block';
-            document.getElementById('br6').style.display = 'block';
+            // document.getElementById('br2').style.display = 'block';
+            // document.getElementById('br3').style.display = 'block';
+            // document.getElementById('br4').style.display = 'block';
+            // document.getElementById('br5').style.display = 'block';
+            // document.getElementById('br6').style.display = 'block';
 
         }
 
         function handleBlur() {
             // Remove <br> elements when the keyboard is closed
             document.getElementById('br1').style.display = 'none';
-            document.getElementById('br2').style.display = 'none';
-            document.getElementById('br3').style.display = 'none';
-            document.getElementById('br4').style.display = 'none';
-            document.getElementById('br5').style.display = 'none';
-            document.getElementById('br6').style.display = 'none';
+            // document.getElementById('br2').style.display = 'none';
+            // document.getElementById('br3').style.display = 'none';
+            // document.getElementById('br4').style.display = 'none';
+            // document.getElementById('br5').style.display = 'none';
+            // document.getElementById('br6').style.display = 'none';
         }
 
     </script>
