--- a/reg2.html
+++ b/reg2.html
@@ -106,10 +106,10 @@
             }
         });
 
-        // Add an event listener for the focus event
+        // KEYBOARD MOVE
         window.addEventListener('focus', handleFocus);
         
-        // Add an event listener for the blur event
+        // event listener for the blur event
         window.addEventListener('blur', handleBlur);
 
         function handleFocus() {
